<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:id="@+id/login"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="?attr/colorPrimary">


	<EditText
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:inputType="textEmailAddress"
		android:ems="10"
		android:id="@+id/etEmail"
		android:textColor="@color/md_white_1000"
		android:backgroundTint="@color/md_white_1000"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		android:hint="@string/plh_email"
		android:textColorHint="@color/brownGrey"
		android:layout_marginStart="20dp"
		android:layout_marginEnd="20dp"
		android:layout_marginTop="80dp" />

	<EditText
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:inputType="textPassword"
		android:ems="10"
		android:id="@+id/etPassword"
		android:textColor="@color/md_white_1000"
		android:backgroundTint="@color/md_white_1000"
		android:hint="@string/plh_password"
		android:textColorHint="@color/brownGrey"
		android:layout_marginTop="24dp"
		app:layout_constraintTop_toBottomOf="@+id/etEmail"
		app:layout_constraintStart_toStartOf="parent"
		android:layout_marginStart="20dp"
		android:layout_marginEnd="20dp"
		app:layout_constraintEnd_toEndOf="parent" />

	<com.google.android.material.button.MaterialButton
		android:id="@+id/btnLogin"
		style="@style/Screen.FilledBlueButton"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:text="@string/btn_login"
		android:textSize="18sp"
		android:paddingTop="10dp"
		android:paddingBottom="10dp"
		app:layout_constraintEnd_toEndOf="parent"
		android:layout_marginStart="20dp"
		app:layout_constraintStart_toStartOf="parent"
		android:layout_marginTop="64dp"
		app:layout_constraintTop_toBottomOf="@+id/etPassword"
		android:layout_marginEnd="20dp" />


	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="0dp"
		android:layout_height="60dp"
		android:background="@color/md_white_1000"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintBottom_toBottomOf="parent"
		android:id="@+id/clRoot">

		<TextView
			android:text="@string/txt_sign_up"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textColor="@color/md_black_1000"
			android:id="@+id/textView"
			android:layout_marginEnd="8dp"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			android:layout_marginStart="8dp"
			android:layout_marginBottom="8dp"
			app:layout_constraintBottom_toBottomOf="parent"
			android:layout_marginTop="8dp"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintHorizontal_bias="0.4" />

		<TextView
			android:text="@string/btn_sign_up"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textColor="@color/darkSkyBlue"
			android:id="@+id/btnSignUp"
			android:elevation="4dp"
			android:textSize="14sp"
			android:layout_marginStart="8dp"
			app:layout_constraintBottom_toBottomOf="@+id/textView"
			app:layout_constraintTop_toTopOf="@+id/textView"
			app:layout_constraintStart_toEndOf="@+id/textView" />

	</androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
